feat: Add favicon to the website
- Included a link to the favicon in the head section of the HTML.
- The favicon is located at "images/tyma_logo_no_background.png" and is of type "image/x-icon".

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="icon" href="images/tyma_logo_no_background.png" type="image/x-icon">
     <title>Home</title>
   </head>
   <body>
