--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
         </div>
 
-        <div class="py-5" style="background-color:#E0E0E0; margin-top: 80px;" id="venue">
+        <div class="py-5" style="margin-top: 80px;" id="venue">
           <div class="container">
               <div class="row bg-primary animate-in-down">
             <div class="p-4 col-md-6 align-self-center text-color">
