--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="py-5" style="margin-top: 80px;" id="venue">
           <div class="container">
-              <div class="row bg-primary animate-in-down">
+            <div class="row animate-in-down">
             <div class="p-4 col-md-6 align-self-center text-color">
                 <h1 style="font-family: DejaVu Sans Mono, monospace; font-weight: 600;">Connecting Hearts, Empowering minds</h1>
                 <p class="my-4" style="color: #fff;">Join TYMa in shaping the future of
