--- a/index.html
+++ b/index.html
@@ -161,13 +161,14 @@
 
           <div class="p-4 col-md-6 align-self-center text-color">
               <h1 style="color: red;">About Us</h1>
-              <p class="my-4" style="color: black;">It is a long established fact that a reader will be distracted 
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or-less
-                normal distribution of letters, as opposed to using 'Content here Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Sunt laborum dolorum
-                mollitia quaerat magnam est optio ad libero alias id?
-                Recusandae tenetur odit saepe consectetur rerum delectus voluptates iste maiores.</p> 
+              <p class="my-4" style="color: black;">
+                The Young Muslims Association(TYMA) is a faith based NGO
+                established to tackle pressing challanges faced by muslim children
+                and lay a solid foundationfor their future. With a focus on nuturing
+                islamic values, fostering moral integrity and promoting holistic development.
+                TYMA empowers children with the knowledge, skilss and leadership qualities needed
+                to thrive in a rapidly changing world. Through impactful programs and initiatives,
+                we aim to build a resilent, faith-driven community committed to shaping a brighter future for the Ummah.</p> 
                 <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Read More</a>
           </div>
         </div>
