feat(index.html): update "About Us" section layout and content
Rearranged layout by modifying column ordering to improve responsiveness (order-2 order-md-1).
Updated styling and structure for the "About Us" section.
Improved textual clarity and readability by correcting content formatting issues (e.g., spacing and phrasing).

--- a/index.html
+++ b/index.html
@@ -151,27 +151,27 @@
     <div class="py-5" id="venue">
       <div class="container">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-lg-1 mb-4"">
-            <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
-              <div class="img">
-              <img src="images/hero_3.jpg" style="height: 350px;" alt="circle image" class="img-fluid">
-              </div>
-            </div>
-            </div>
-
-          <div class="p-4 col-md-6 align-self-center text-color">
-              <h1 style="color: red;">About Us</h1>
-              <p class="my-4" style="color: black;">
-                The Young Muslims Association(TYMA) is a faith based NGO
-                established to tackle pressing challanges faced by muslim children
-                and lay a solid foundationfor their future. With a focus on nuturing
-                islamic values, fostering moral integrity and promoting holistic development.
-                TYMA empowers children with the knowledge, skilss and leadership qualities needed
-                to thrive in a rapidly changing world. Through impactful programs and initiatives,
-                we aim to build a resilent, faith-driven community committed to shaping a brighter future for the Ummah.</p> 
-                <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Read More</a>
+          <div class="p-4 col-md-6 align-self-center text-color order-2 order-md-1">
+          <h1 style="color: red;">About Us</h1>
+          <p class="my-4" style="color: black;">
+            The Young Muslims Association(TYMA) is a faith based NGO
+            established to tackle pressing challanges faced by muslim children
+            and lay a solid foundationfor their future. With a focus on nuturing
+            islamic values, fostering moral integrity and promoting holistic development.
+            TYMA empowers children with the knowledge, skilss and leadership qualities needed
+            to thrive in a rapidly changing world. Through impactful programs and initiatives,
+            we aim to build a resilent, faith-driven community committed to shaping a brighter future for the Ummah.</p> 
+            <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Read More</a>
+          </div>
+          <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-1 order-md-2 mb-4">
+        <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+          <div class="img">
+          <img src="images/hero_3.jpg" style="height: 350px;" alt="circle image" class="img-fluid">
           </div>
         </div>
+          </div>
+        </div>
+      </div>
 
       </div>
     </div>
