--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/tyma_logo_no_background.png" type="image/x-icon">
     <title>Home</title>
+    <style>
+      body, html {
+        overflow-x: hidden;
+      }
+      .container {
+        max-width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+      .row {
+        margin-left: 0;
+        margin-right: 0;
+      }
+    </style>
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".site-navbar" data-offset="70">
 
     <div class="site-mobile-menu">
       <div class="site-mobile-menu-header">
@@ -44,9 +58,9 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-left" style="margin-top: 25px; margin-left: -120px;" role="navigation">
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#" style="color: red;"><span>Home</span></a></li>
-                <li><a href="#"><span>About Us</span></a></li>
-                <li><a href="#"><span>Admission</span></a></li>
+                <li><a href="#home" style="color: red;"><span>Home</span></a></li>
+                <li><a href="#about-us"><span>About Us</span></a></li>
+                <li><a href="#admission"><span>Admission</span></a></li>
                 <li class="has-children">
                   <a href="#"><span>Our Network</span></a>
                   <ul class="dropdown arrow-top">
@@ -73,8 +87,8 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="#"><span>News</span></a></li>
-                <li><a href="#"><span>Contacts</span></a></li>
+                <li><a href="#news"><span>News</span></a></li>
+                <li><a href="#contacts"><span>Contacts</span></a></li>
               </ul>
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block text-right" style="margin-top: -55px;">
                 <li><a href="#" class="btn btn-primary" style="background-color: #3c236a; color: #fff;"><span>Donate</span></a></li>
@@ -102,28 +116,28 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="images/hero_1.jpg" style="height: 600px;" alt="First slide">
+          <img class="d-block w-100" src="images/hero_1.jpg" style="height: 400px;" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/hero_1.jpg" style="height: 600px;" alt="Second slide">
+          <img class="d-block w-100" src="images/hero_1.jpg" style="height: 400px;" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/hero_1.jpg" style="height: 600px;" alt="Third slide">
+          <img class="d-block w-100" src="images/hero_1.jpg" style="height: 400px;" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
 
-        <div class="py-5" style="margin-top: 80px;" id="venue">
+        <div class="py-5" id="venue">
           <div class="container">
             <div class="row animate-in-down">
-            <div class="p-4 col-md-6 align-self-center text-color">
+            <div class="p-4 col-md-7 align-self-center text-color">
                 <h1 style="font-family: DejaVu Sans Mono, monospace; font-weight: 600;">Connecting Hearts, Empowering minds</h1>
                 <p class="my-4" style="color: #fff;">Join TYMa in shaping the future of
             our children through faith oriented education and spiritual knowledge Lorem ipsum dolor,
@@ -148,25 +162,25 @@
       </a>
     </div>
 
-    <div class="py-5" id="venue">
+    <div class="py-5" id="about-us">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="p-4 col-md-6 align-self-center text-color order-2 order-md-1">
-          <h1 style="color: red;">About Us</h1>
-          <p class="my-4" style="color: black;">
-            The Young Muslims Association(TYMA) is a faith based NGO
-            established to tackle pressing challanges faced by muslim children
-            and lay a solid foundationfor their future. With a focus on nuturing
-            islamic values, fostering moral integrity and promoting holistic development.
-            TYMA empowers children with the knowledge, skilss and leadership qualities needed
-            to thrive in a rapidly changing world. Through impactful programs and initiatives,
-            we aim to build a resilent, faith-driven community committed to shaping a brighter future for the Ummah.</p> 
-            <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Read More</a>
+          <div class="p-4 col-md-7 align-self-center text-color order-2 order-md-1">
+            <h1 style="color: red;">About Us</h1>
+            <p class="my-4" style="color: black;">
+              The Young Muslims Association(TYMA) is a faith based NGO
+              established to tackle pressing challanges faced by muslim children
+              and lay a solid foundationfor their future. With a focus on nuturing
+              islamic values, fostering moral integrity and promoting holistic development.
+              TYMA empowers children with the knowledge, skilss and leadership qualities needed
+              to thrive in a rapidly changing world. Through impactful programs and initiatives,
+              we aim to build a resilent, faith-driven community committed to shaping a brighter future for the Ummah.</p> 
+              <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Read More</a>
           </div>
           <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-1 order-md-2 mb-4">
         <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
           <div class="img">
-          <img src="images/hero_3.jpg" style="height: 350px;" alt="circle image" class="img-fluid">
+            <img src="images/hero_3.jpg" style="height: 350px; width: 300px; border-radius: 10px;" alt="circle image" class="img-fluid">
           </div>
         </div>
           </div>
@@ -175,7 +189,144 @@
 
       </div>
     </div>
+
+    <div class="py-5" id="vision">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 mb-4">
+            <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+              <div class="img">
+                <img src="images/hero_3.jpg" style="height: 300px; width: 300px; border-radius: 10px;" alt="vision image" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="p-4 col-md-7 align-self-center text-color">
+            <h4 style="color: red;">Our Vision</h4>
+            <h2 class="display-18" style="color: black; font-size: 2rem;" class="responsive-heading">Building a Legacy of Vibrant Muslim Ambassadors</h1>
+            <p class="my-4" style="color: rgb(110, 110, 110);">
+              Advancing a new generation of muslim ambassadors through faith, character and leadership development.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     
+    <div class="py-5" id="objectives">
+      <div class="container">
+      <div class="row justify-content-center">
+        <div class="p-4 col-md-7 text-color" data-aos="fade-up" data-aos-delay="100">
+        <h4 style="color: red;">Our Objectives</h4>
+        <h2 class="display-18" style="color: black; font-size: 2rem;" class="responsive-heading">Advancing education and training for a brighter future</h2>
+        <p class="my-4" style="color: rgb(110, 110, 110);">
+          The Young Muslims Association(TYMA) is committed to the development of children's education and empowering them to achieve their full potential.
+        </p>
+        <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Learn More</a>
+        </div>
+        <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 mb-4">
+        <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+          <div class="img">
+          <img src="images/hero_3.jpg" style="height: 300px; width: 300px; border-radius: 10px;" alt="objectives image" class="img-fluid">
+          </div>
+        </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="py-5" id="mission">
+      <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 mb-4">
+        <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+          <div class="img">
+          <img src="images/hero_3.jpg" style="height: 300px; width: 300px; border-radius: 10px;" alt="mission image" class="img-fluid">
+          </div>
+        </div>
+        </div>
+        <div class="p-4 col-md-7 align-self-center text-color" data-aos="fade-up" data-aos-delay="100">
+        <h4 style="color: red;">Our Mission</h4>
+        <h2 class="display-18" style="color: black; font-size: 2rem;" class="responsive-heading">Empowering the Future Through Knowledge and Values</h2>
+        <p class="my-4" style="color: rgb(110, 110, 110);">
+          Developing children's knowledge, skills and moral values through regular training by competent personnel, using modern technology to positively impact children's development.
+        </p>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="py-5" id="means">
+      <div class="container">
+      <div class="row justify-content-center">
+        <div class="p-4 col-md-7 align-self-center text-color" data-aos="fade-up" data-aos-delay="100">
+        <h4 style="color: red;">Our Means</h4>
+        <h2 class="display-18" style="color: black; font-size: 2rem;" class="responsive-heading">Transforming education through diverse initiatives</h2>
+        <p class="my-4" style="color: rgb(110, 110, 110);">
+          The Young Muslims Association(TYMA) will achieve its objectives by organizing Qur'anic memorization classes, and establishing various clubs including Reading, Taekwondo and other uniformed groups.
+        </p>
+        <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Learn More</a>
+        </div>
+        <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 mb-4">
+        <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+          <div class="img">
+          <img src="images/hero_3.jpg" style="height: 300px; width: 300px; border-radius: 10px;" alt="means image" class="img-fluid">
+          </div>
+        </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="py-5" id="activities">
+      <div class="container">
+      <div class="row justify-content-center">
+        <div class="p-4 text-color  justify-content-between align-items-center" data-aos="fade-up" data-aos-delay="100" style="display: flex;">
+          <h2 style="color: red; text-align: left;">Our Activities</h2>
+          <a href="#" style="color: #3c236a; text-decoration: underline; text-align: right;">View all activities</a>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6" style="background-color: #F7F6F4;">
+        <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+          <div class="img">
+          <h4 style="color: black;">Weekly training</h4>
+          <p class="my-4" style="color: rgb(110, 110, 110);">
+            Save time and resources combing through a plethora of applications. Leverage our growing network and hire top-vetted tech talent across Africa quickly and seamlessly.
+          </p>
+          <img src="images/hero_1.jpg" style="height: 415px; width: 100%; border-radius: 10px;" alt="activity 1 image" class="img-fluid">
+          </div>
+        </div>
+        </div>
+        <div class="col-md-5">
+        <div class="row">
+          <div class="col-md-12 mb-4" style="background-color: #F7F6F4;">
+          <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+            <div class="img">
+            <h4 style="color: black;">Sports & Fitness</h4>
+            <p class="my-4" style="color: rgb(110, 110, 110);">
+              We organize regular sporting activities and competitions across all our training centers.
+            </p>
+            <img src="images/hero_1.jpg" style="height: 145px; width: 100%; border-radius: 10px;" alt="activity 2 image" class="img-fluid">
+            </div>
+          </div>
+          </div>
+          <div class="col-md-12" style="background-color: #F7F6F4;">
+          <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
+            <div class="img">
+            <h4 style="color: black;">Excursion & Tours</h4>
+            <p class="my-4" style="color: rgb(110, 110, 110);">
+              We believe in the impact of excursions on the metal development and social exposure of children.
+            </p>
+            <img src="images/hero_1.jpg" style="height: 145px; width: 100%; border-radius: 10px;" alt="activity 3 image" class="img-fluid">
+            </div>
+          </div>
+          </div>
+        </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
