Added more sections to the homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/tyma_logo_no_background.png" type="image/x-icon">
     <title>Home</title>
-    <style>
+    <!-- <style>
       body, html {
         overflow-x: hidden;
       }
@@ -31,7 +31,7 @@
         margin-left: 0;
         margin-right: 0;
       }
-    </style>
+    </style> -->
   </head>
   <body data-spy="scroll" data-target=".site-navbar" data-offset="70">
 
@@ -91,7 +91,7 @@
                 <li><a href="#contacts"><span>Contacts</span></a></li>
               </ul>
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block text-right" style="margin-top: -55px;">
-                <li><a href="#" class="btn btn-primary" style="background-color: #3c236a; color: #fff;"><span>Donate</span></a></li>
+                <li><a href="#" class="btn btn-primary" style="background-color: #422774; color: #fff;"><span>Donate</span></a></li>
                 <li class="has-children">
                   <a href="#" id="must_be_white"><span><img src="images/globe_logo.png" alt="Community" style="width: 20px; border-radius: 50%;"></span></a>
                   <ul class="dropdown arrow-top">
@@ -175,7 +175,7 @@
               TYMA empowers children with the knowledge, skilss and leadership qualities needed
               to thrive in a rapidly changing world. Through impactful programs and initiatives,
               we aim to build a resilent, faith-driven community committed to shaping a brighter future for the Ummah.</p> 
-              <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Read More</a>
+              <a href="#" class="btn mb-3 p-2" style="background-color: #422774; color: #fff;">Read More</a>
           </div>
           <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-1 order-md-2 mb-4">
         <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
@@ -220,7 +220,7 @@
         <p class="my-4" style="color: rgb(110, 110, 110);">
           The Young Muslims Association(TYMA) is committed to the development of children's education and empowering them to achieve their full potential.
         </p>
-        <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Learn More</a>
+        <a href="#" class="btn mb-3 p-2" style="background-color: #422774; color: #fff;">Learn More</a>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 mb-4">
         <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
@@ -263,7 +263,7 @@
         <p class="my-4" style="color: rgb(110, 110, 110);">
           The Young Muslims Association(TYMA) will achieve its objectives by organizing Qur'anic memorization classes, and establishing various clubs including Reading, Taekwondo and other uniformed groups.
         </p>
-        <a href="#" class="btn mb-3 p-2" style="background-color: #3c236a; color: #fff;">Learn More</a>
+        <a href="#" class="btn mb-3 p-2" style="background-color: #422774; color: #fff;">Learn More</a>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 mb-4">
         <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
@@ -279,9 +279,9 @@
     <div class="py-5" id="activities">
       <div class="container">
       <div class="row justify-content-center">
-        <div class="p-4 text-color  justify-content-between align-items-center" data-aos="fade-up" data-aos-delay="100" style="display: flex;">
+        <div class="p-4 text-color  justify-content-between align-items-center" data-aos="fade-up" data-aos-delay="100" style="display: flex; width: 95%;">
           <h2 style="color: red; text-align: left;">Our Activities</h2>
-          <a href="#" style="color: #3c236a; text-decoration: underline; text-align: right;">View all activities</a>
+            <a href="#" style="color: #422774; text-decoration: underline; text-align: right;">View all activities <img src="images/arrow-up.png" alt="arrow" style="width: 20px; font-weight: bold; transform: rotate(45deg);"></a>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -326,6 +326,76 @@
       </div>
     </div>
 
+    <div class="py-5" id="muslim-camping">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="p-4 text-color justify-content-between align-items-center" data-aos="fade-up" data-aos-delay="100" style="display: flex; width: 95%;">
+            <h2 style="color: red; text-align: left;">Post Camping Adventures</h2>
+            <a href="#" style="color: #422774; text-decoration: underline; text-align: right;">View all events <img src="images/arrow-up.png" alt="arrow" style="width: 20px; font-weight: bold; transform: rotate(45deg);"></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <div class="card" style="background-color: #422774; width: 100%; max-width: 394.48px; height: 470px; border-radius: 8.44483px; flex: none; order: 0; flex-grow: 0;">
+              <div class="card-body py-5">
+                <h1 class="card-title" style="color: white;">1st</h1>
+                <h5 class="card-title mb-4" style="color: white;">October</h5>
+                <h2 class="card-subtitle mt-3 mb-2 " style="color: white;">Muslim Camping Children Prog' (MCCP) 2023</h2>
+                <p class="card-text" style="color: white; font-weight: 500;">TYMA's Muslim Children Camping Program nurtures faith, builds skills, and fosters lasting friendships among young Muslims.</p>
+                <a href="#" style="color: white; text-decoration: underline;">Read More<img src="images/arrow-northeast-white.png" alt="arrow" style="width: 13px; margin-left: 10px;"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card" style="background-color: red; width: 100%; max-width: 394.48px; height: 470px; border-radius: 8.44483px; flex: none; order: 0; flex-grow: 0;">
+              <div class="card-body py-5">
+                <h1 class="card-title" style="color: white;">27th</h1>
+                <h5 class="card-title mb-4" style="color: white;">December</h5>
+                <h2 class="card-subtitle mt-3 mb-2 " style="color: white;">Muslim Camping Children Prog' (MCCP) 2024</h2>
+                <p class="card-text" style="color: white; font-weight: 500;">TYMA's Muslim Children Camping Program nurtures faith, builds skills, and fosters lasting friendships among young Muslims.</p>
+                <a href="#" style="color: white; text-decoration: underline;">Read More<img src="images/arrow-northeast-white.png" alt="arrow" style="width: 13px; margin-left: 10px;"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card" style="background-color: #422774; width: 100%; max-width: 394.48px; height: 470px; border-radius: 8.44483px; flex: none; order: 0; flex-grow: 0;">
+              <div class="card-body py-5">
+                <a href="#" style="color: #422774; background-color: white; border-radius: 20px; padding: 5px 10px; font-weight: bold; text-decoration: none; position: absolute; top: auto; right: 20px;">Upcoming</a>
+                <h1 class="card-title" style="color: white;">1st</h1>
+                <h5 class="card-title mb-4" style="color: white;">October</h5>
+                <h2 class="card-subtitle mt-3 mb-2 " style="color: white;">Muslim Camping Children Prog' (MCCP) 2025</h2>
+                <p class="card-text" style="color: white; font-weight: 500;">TYMA's Muslim Children Camping Program nurtures faith, builds skills, and fosters lasting friendships among young Muslims.</p>
+                <a href="#" style="color: white; text-decoration: underline;">Read More<img src="images/arrow-northeast-white.png" alt="arrow" style="width: 13px; margin-left: 10px;"></a>
+              </div>
+            </div>
+          </div>
+          <!-- Repeat for other cards if needed -->
+        </div>
+      </div>
+    </div>
+
+    <div class="py-5" id="muslim-camping">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="p-4 text-color justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="100" style="display: flex; width: 95%;">
+            <h2 style="color: red; text-align: center;">Latest News and Events</h2> 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <div class="card" style="width: 100%; border-radius: 8.44483px; flex: none; order: 0; flex-grow: 0;">
+              <div class="card-body">
+                <h5 class="card-title" style="color: white;">Day 3 of TYMa Lecture Series</h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="color: white;">Peer Group Influence: Beyond Physical</h6>
+                <p class="card-text" style="color: white;">By The Young Muslim Association | 27 Feb, 2024</p>
+                <p class="card-text" style="color: white;">Event/News/Kids</p>
+                <a href="#" class="btn btn-primary" style="background-color: red; color: #fff;">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <script src="js/jquery-3.3.1.min.js"></script>
